# toml-sort

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  example.toml  mypy.ini  noxfile.py  output.toml  pyproject.toml  readthedocs.yaml
.github/workflows/: release.yaml  testing.yaml
docs/: autogen-requirements.txt  cli.rst  conf.py  index.rst  modules.rst
tests/: conftest.py  test_cli.py  test_toml_sort.py
tests/examples/: comment.toml  dotted-key.toml  from-toml-lang.toml  gradle-version-catalog.toml  inline.toml  pyproject-weird-order.toml  single-comment.toml  weird.toml
tests/examples/defaults/: from-toml-lang.toml  pyproject-weird-order.toml
tests/examples/sorted/: comment-comments-preserved.toml  comment-header-footer.toml  comment-no-comments.toml  dotted-key.toml  from-toml-lang-first.toml  from-toml-lang-overrides.toml  from-toml-lang.toml  gradle-version-catalog.toml  inline-default.toml  inline-no-comments-no-table-sort.toml  inline.toml  weird.toml
toml_sort/: __init__.py  cli.py  settings.py  tomlsort.py
