[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
strict = true
enable_error_code = "ignore-without-code,redundant-expr,truthy-bool"

[tool.poetry]
name = "toml-sort"
version = "0.24.1"
description = "Toml sorting library"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/pappasam/toml-sort"
repository = "https://github.com/pappasam/toml-sort"
keywords = ["toml", "sort", "cli", "unix", "utility"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",
  "Typing :: Typed",
]
include = ["README.md"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = ">=0.13.2"

[tool.poetry.group.dev.dependencies]
mypy = "*"
nox = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.poetry.scripts]
toml-sort = 'toml_sort.cli:cli'

[tool.ruff.lint]
select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]
ignore = [
  "D10",  # missing-docstring
  "D206", # indent-with-spaces
  "D203", # one-blank-line-before-class
  "D213", # multiline-summary-second-line
  "D300", # triple-single-quotes
  "D401", # imperative-mood
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "E501", # line-too-long
]
